results/SpecGenBench/0-shot/log-MatrixMul-2023_11_28_23_02_18.txt
public class MatrixMul {
    
    //@ requires a != null && b != null;
    //@ requires a.length == 2 && a[0].length == 2 && a[1].length == 2;
    //@ requires b.length == 2 && b[0].length == 2 && b[1].length == 2;
    //@ ensures \result != null && \result.length == 2 && \result[0].length == 2 && \result[1].length == 2;
    //@ ensures (\forall int i, j; 0 <= i && i < 2 && 0 <= j && j < 2; \result[i][j] == a[i][0] * b[0][j] + a[i][1] * b[1][j]);
    public int[][] multiply(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixMul.java:12: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
                  ^
  Reason: Double rewriting of ident: i i_555_555___43 i_555_569___46
1 error

